--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,10 +16,10 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
 # DATABASE CONNECTION
-spring.datasource.url=jdbc:mysql://bjozzchm6ja0hjqb49e7-mysql.services.clever-cloud.com:3306/bjozzchm6ja0hjqb49e7
+spring.datasource.url=jdbc:mysql://root:VMPojEjbUjfgTzJUlQmJuIdxFUdQQuKD@mysql.railway.internal:3306/railway
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=u394ajeaemsqoi06
-spring.datasource.password=iu85hVKdeywUHWw9rk3N
+spring.datasource.username=root
+spring.datasource.password=VMPojEjbUjfgTzJUlQmJuIdxFUdQQuKD
 # spring.datasource.url=jdbc:mysql://192.168.200.161:3307/soundrentals
 # spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # spring.datasource.username=root
