--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,29 +1,15 @@
-# Etapa de construcción
-FROM node:18 AS build
+FROM node:18-alpine
 
-# Crear directorio de trabajo
 WORKDIR /app
 
-# Copiar package.json y package-lock.json
-COPY package*.json ./
+COPY package.json .
 
-# Instalar dependencias
 RUN npm install
 
-# Copiar el resto del código de la aplicación
 COPY . .
 
-# Construir la aplicación
 RUN npm run build
 
-# Etapa de producción
-FROM nginx:stable-alpine
+EXPOSE 8080
 
-# Copiar el resultado de la construcción desde la etapa anterior
-COPY --from=build /app/dist /usr/share/nginx/html
-
-# Exponer el puerto
-EXPOSE 80
-
-# Comando por defecto para ejecutar Nginx
-CMD ["nginx", "-g", "daemon off;"]
+CMD [ "npm", "run", "preview" ]
